resmtp (0.3.1) unstable; urgency=low

  * Logging refactored: removed extra string objects reallocations

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 21 Jan 2016 10:55:00 +0300
 
resmtp (0.3.0) unstable; urgency=low

  * Set version to 0.3.0: candidate to test on increased load

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 20 Jan 2016 15:10:00 +0300
 
resmtp (0.2.6) unstable; urgency=low

  * Monitoring: implemented
  * Critical bugs fixed
  * Log for Spamhaus
  * Don't check early write for whitelisted clients

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 20 Jan 2016 14:30:00 +0300
 
resmtp (0.2.5) unstable; urgency=low

  * DEB package build: set CMAKE_BUILD_TYPE to 'Release'

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 12:37:00 +0300
 
resmtp (0.2.4) unstable; urgency=low

  * Turn off some excessive debug logging

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 11:49:00 +0300
 
resmtp (0.2.3) unstable; urgency=low

  * Monitoring of number of mails

 -- Yuri Epstein <yuri.epstein@gmail.com>  Tue, 12 Jan 2016 9:53:00 +0300
 
resmtp (0.2.2) unstable; urgency=low

  * Removed global mutex lock in connection acceptor
  * Added log level for buffers dump
  * Unified backend and frontend components logs
  * CMakeLists.txt reworked, app version is now taken from changelog (no need
    to manually update the code)

 -- Yuri Epstein <yuri.epstein@gmail.com>  Mon, 28 Dec 2015 10:26:00 +0300
 
resmtp (0.2.1) unstable; urgency=low

  * State monitoring extension and bugfix
  * Implemented workaround for the case when QUIT command isn't received before
    client closed the connection
  * Logs extended, DEBUG logs now contain session and message id

 -- Yuri Epstein <yuri.epstein@gmail.com>  Fri, 25 Dec 2015 13:04:00 +0300
 
resmtp (0.2.0) unstable; urgency=low

  * Implemented state monitoring.

 -- Yuri Epstein <yuri.epstein@gmail.com>  Mon, 21 Dec 2015 16:43:00 +0300
 
resmtp (0.1.0) unstable; urgency=low
