@@ -1,4 +1,22 @@
 ##
+## Log level.
+##
+## Allowed values: 'crit', 'err', 'warning', 'notice', 'info', 'debug', 'buffers'.
+## Correspond to syslog's LOG_*** priority codes. See man syslog (3).
+## Messages with the 'buffers' priority are mapped to LOG_DEBUG.
+##
+## default: 'notice'
+##
+log = notice
+
+##
+## Tarpit delay, seconds. Set to '0' to disable tarpitting.
+##
+## default: '0'
+##
+tarpit_delay_seconds = 20
+
+##
 ## Interfaces to listen on.
 ##
 listen = 0.0.0.0:25
@@ -9,13 +27,6 @@ listen = 0.0.0.0:25
 ## Not used if use_tls is set to 'no'.
 ##
 #ssl_listen = 0.0.0.0:465
-
-##
-## Tarpit delay, seconds. Set to '0' to disable tarpitting.
-##
-## default: '0'
-##
-tarpit_delay_seconds = 20
 
 ##
 ## Monitoring interface to listen on.
@@ -30,7 +41,7 @@ monitoring_listen = 0.0.0.0:11311
 ##
 ## Spamhaus log file.
 ##
-## default: ''
+## default: '' (spamhaus logging turned off)
 ##
 spamhaus_log_file = /spool/logs/resmtp/spamhaus.log
 
@@ -112,7 +123,8 @@ rbl_check = yes
 ##
 ## Space-separated list of hosts to do RBL-checks with.
 ##
-rbl_hosts = resmtp-bl.rambler.ru
+rbl_hosts = insecure-bl.rambler.ru
+#rbl_hosts = resmtp-bl.rambler.ru
 #rbl_hosts = bl.spamcop.net
 
 ##
